# evolution_simulation

./: Cargo.toml  README.md  evolution_simulation.wasm  index.html  justfile
bevy_version/: Cargo.toml
bevy_version/src/: food.rs  interactions.rs  main.rs  slime.rs  ui.rs  utils.rs
bevy_version/src/entities/: food.rs  mod.rs  slime.rs
docs/: food.md  slime.md
macroquad/: Cargo.toml
macroquad/src/: lib.rs
macroquad_version/: justfile
macroquad_version/src/: food.rs  slime.rs  utils.rs  world.rs
src/: food.rs  lib.rs  main.rs  slime.rs  utils.rs  world.rs
web/: index.html
